# skill-dump

./: .agentskills.json  AGENTS.md  LICENSE  README.md  agentskills.json  package.json
.agents/plugins/: marketplace.json
.agents/skills/ghostty-theme-tools/: SKILL.md
.agents/skills/ghostty-theme-tools/scripts/: transform-ghostty-theme.py
.agents/skills/ghostty-theme-tools/themes/: Apple Classic Black.vscode-color-theme.json
.agents/skills/transcript-summarize/: SKILL.md
.agents/skills/transcript-summarize/scripts/: get_transcript.py  test_get_transcript.py
.agents/skills/whisper-transcript-summarize/: SKILL.md
.agents/skills/whisper-transcript-summarize/scripts/: test_transcribe_audio.py  transcribe_audio.py
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
scripts/: manage-skills.mjs
skills/ghostty-theme-tools/: SKILL.md
skills/ghostty-theme-tools/scripts/: ghostty-theme-to-vscode.py  set-terminal-themes.py
skills/ghostty-theme-tools/themes/: Apple Classic Black  Apple Classic Black.vscode-color-theme.json
skills/transcript-summarize/: .gitignore  README.md  SKILL.md  get_transcript.sh  pyproject.toml
skills/transcript-summarize/scripts/: get_transcript.py
skills/web-to-markdown/: SKILL.md
skills/web-to-markdown/scripts/: convert_web_to_md.py
