[project]
name = "transcript-summarize"
version = "0.1.0"
description = "Download, clean, and summarize video transcripts using yt-dlp and Whisper."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "faster-whisper",
]

[project.scripts]
get-transcript = "scripts.get_transcript:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
